fixes alignment on heatmap

--- a/app/assets/styles/modules/almanac.less
+++ b/app/assets/styles/modules/almanac.less
@@ -186,6 +186,6 @@ almanac-widget {
   }
 
   #heatmap {
-    margin-top: 55px;
+    margin-top: 53px;
   }
 }
